zero-cost-templating/tests/ui/compile_fail/variable_macro_missing_second_parameter.stderr
error: unexpected end of macro invocation
  --> tests/ui/compile_fail/variable_macro_missing_second_parameter.rs:14:42
   |
9  | #[template_stream("../../../../zero-cost-templating/test.html.hbs")]
   | -------------------------------------------------------------------- when calling this macro
...
14 |     let template = page_title1!(template,);
   |                                          ^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$value:expr`
  --> tests/ui/compile_fail/variable_macro_missing_second_parameter.rs:9:1
   |
9  | #[template_stream("../../../../zero-cost-templating/test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
